@@ -13,13 +13,13 @@ EBUILD twisted-conch-0.5.0-r1.ebuild 543 RMD160 b86e3b52c42c6aa54d7add1620423269
 EBUILD twisted-conch-0.6.0.ebuild 545 RMD160 d66b0eb7e22cd120b67cd47c259d55644b04ed48 SHA1 f3318065b074142f7aa791aa46f1c069ee8e81f9 SHA256 aecf0760459fcc43306ea414fc417838d8734660fc9903085f70b6752d96521d
 EBUILD twisted-conch-0.7.0.ebuild 536 RMD160 6e4f48634d9a17979d07ab91ac259f1a8f5bada6 SHA1 e605613a9c33728a52c55a845a743e5dc253a586 SHA256 801cca69b8f6d9b2e1fe22be82f30cbb809b4fc0fa98df568a3a5942f0280e45
 EBUILD twisted-conch-0.8.0.ebuild 445 RMD160 12598b29408884ccad117a8fe532c6b5ad75aa1b SHA1 9d61d3d0b49f2351976c12e1351bab9b84e96a15 SHA256 5526b17252e54d53aa617723dc0daed4400e78e785fd7ecf9d980634e02fbb6e
-EBUILD twisted-conch-8.0.0.ebuild 444 RMD160 4c37d426c6cfb68a60395843a59780c4d43d1bf1 SHA1 f2a436521b762378fea669a5efcfcc3f2dea7ec4 SHA256 bf77d3ab8a906e2e50768ae8da932f76454b3299360f41bcbae77ea0931a3dd8
-MISC ChangeLog 4019 RMD160 14dbeaae84a6f81e5f43443a0111c84d5766c2c1 SHA1 922489732d48fb07eaeb82a91fea331a1ab3818b SHA256 43903cb83b696e43c15d090d01f4b4408ffd1f885421b02e48a7e268a3f1d129
+EBUILD twisted-conch-8.0.0.ebuild 489 RMD160 1175d96bde871a9c26e34d33a4f3b90253a144ae SHA1 620a2b5582237acee868bd9fe592b45f98c6f946 SHA256 55d2a56545b0c68b4e6c61dbcdb61607ab8b513680f2a06f75637fe14684f030
+MISC ChangeLog 4131 RMD160 6c5950874d930278c0f23699c927f831107b24f5 SHA1 2241ab7447b1d0a3c908abdcd2f2071ba56f59e8 SHA256 8b83359a1d267c4a68c39cd3b1373768a3ba405af1f2d93c971b02d6191eba87
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkgp+1kACgkQQU4yORhF8iB0LACfYERoeepjAGs+X2467Jz5/yt7
-jA8AoKfOVXiAPqIyRJLJzX/KA0bq75cN
-=37vd
+iEYEARECAAYFAkgp/X0ACgkQQU4yORhF8iBHYwCePALi1vYhbLrUv6UPGjjbhBWC
+9+wAmwW2zsNjZf3ESr8ertzlpzSzHiFZ
+=DiCe
 -----END PGP SIGNATURE-----
