@@ -6,16 +6,18 @@ AUX twisted-web-0.5.0-tests-2.2-compat.patch 4006 RMD160 23b068ebde8fc096117b6be
 DIST TwistedWeb-0.5.0.tar.bz2 263139 RMD160 61829c8ae492c7cf3f43f45c70a5653584e50378 SHA1 144657d7e6ca6cbb2fd20b9a07e1a83544867099 SHA256 7d33de4924c0f7819b3ba9980461ca2bf7b8f5619f21f90755c29255570b599e
 DIST TwistedWeb-0.6.0.tar.bz2 263572 RMD160 3884538b3d937365acbab06dbf44a7223ba019e0 SHA1 2593bfe51939e5260671a96e396f57e701685788 SHA256 db8cb87fd65f751a807fe22893145210235ce9fbc070e10fd827495f05babca6
 DIST TwistedWeb-0.7.0.tar.bz2 263183 RMD160 7e1c2cf1a2984a298bd2af3d3d983f559ed43e00 SHA1 fefc02f5d72e5693e57f5970b6be639af5a31db1 SHA256 7b934d11d3920c18e1f85fb78352b5b232fa68c10ec218085abdedd167a380f1
+DIST TwistedWeb-8.0.0.tar.bz2 274859 RMD160 1de0e8d8d89e9c2eda981b4a24ecd2d41aedc6a6 SHA1 435acadcf4b67052f3fdcba2e6662882539adac0 SHA256 3e0a9cbf7ffcd211c3622bfc97c83ecee9f4431d4789465ad6abb5ccf2415334
 EBUILD twisted-web-0.5.0-r1.ebuild 569 RMD160 2922ef7b5129cfa6cf1f4b7e86335d4350ae82b5 SHA1 9e6ee3d90d0c685d5a3986d70a315f459fe484fc SHA256 a0f4136a94ee65336ea216be1a41b9d4cac19f425d816394eab473e2ec343faa
 EBUILD twisted-web-0.5.0-r3.ebuild 904 RMD160 0b9a4b4835c08de0f6a09f16fe6828bacc063c20 SHA1 6e444e2cc0064f38f3573f25d53da1a4ba368571 SHA256 587a09fee71e0b54af48838d595e78a40a9c5e2bc25aaf1c039fc306860b0096
 EBUILD twisted-web-0.6.0.ebuild 523 RMD160 4e78ef448bff235554a6399463927856a0bc8968 SHA1 588b828ce95aa07197228c197e82d5c87f52fd35 SHA256 1d851b31b7aa3833288f60d01509910b568d1cf6f9ca1f94e67bf381b8ce49a4
 EBUILD twisted-web-0.7.0.ebuild 548 RMD160 3cc8aa2bc0b21973534c7a26aaa440369e91786b SHA1 964d4a09aa53dfc12e6883a1b3dad87d45b5e10a SHA256 5f669a4990328422313d2441800e3c2f22aa15db97b7884423c2c26310665333
-MISC ChangeLog 4796 RMD160 cd8c4182726725478ffe0f2a37b04fb5e74b1681 SHA1 5abf7aeca8f08d28eb054862f365b2bd6e8b2255 SHA256 47658aac68d0f56a28fa737e1318bad37891880387b97789a08c9a2344c7b34c
+EBUILD twisted-web-8.0.0.ebuild 579 RMD160 5a932d0857e5320cad597c0d726d98ab5b9ddf06 SHA1 6ef59d853ed8febaa0ce959967f8ace150d23a36 SHA256 29d4e25023b5be8452960f7510d9ec78af3ba2d5e2229ab2489cc85c5beb61ed
+MISC ChangeLog 4923 RMD160 3f0a7c5a31912c152048eeb8e92a873b3c371d41 SHA1 7d46c41d0fa6bdf4a3efce2e94c8de128035511b SHA256 79d29fa920abf75a50e9f1c4ff571c047c6af576d4fec423a58d25a246202671
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFH2CO9yuNVb5qfaOYRAvJVAKChpSDklGjUv9qjhBZPh6iPk0xOVwCcCaGy
-SAqo1+KhIuRnTwy1xc9eITI=
-=1/UQ
+iEYEARECAAYFAkgp/NwACgkQQU4yORhF8iBwLwCgvK9lAR1+RJT5BeMKa1xwOG2/
+WlAAn2BoL+uLzxVkUoGN+8xFs9K8fYSw
+=+HlA
 -----END PGP SIGNATURE-----
