@@ -1,0 +1,19 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-web/Attic/twisted-web-8.0.0.ebuild,v 1.1 2008/05/13 20:40:55 hawking Exp $
+
+MY_PACKAGE=Web
+
+inherit twisted eutils
+
+DESCRIPTION="Twisted web server, programmable in Python"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+
+DEPEND="=dev-python/twisted-$(get_version_component_range 1-2)*"
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+	epatch "${FILESDIR}"/${PN}-0.5.0-root-skip.patch
+}
